// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FloatingAdminMenu (Diamond Snapshot) > admin menüsü açıldığında butonlar doğru görünmeli 1`] = `
<DocumentFragment>
  <div
    class="z-[100]"
  >
    <div
      class="w-[104px] flex flex-col-reverse items-center shadow-[0_10px_40px_rgba(0,0,0,0.15)] bg-white/50 backdrop-blur-2xl border border-white/50 p-1 sm:p-1 rounded-2xl sm:rounded-lg overflow-hidden"
    >
      <div
        class="w-full"
      >
        <button
          aria-label="Menüyü Kapat"
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-900 text-white hover:bg-stone-800 shadow-lg shadow-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        !bg-white !text-stone-900 border-2 border-stone-100 hover:scale-105 active:scale-95 transition-all h-11 sm:h-8 w-full shadow-none rounded-lg relative overflow-hidden
      "
        >
          <div
            class="
          
          
        "
          >
            <div
              class="flex flex-row items-center justify-center gap-1.5 w-full h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-x w-full h-full p-0.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 6 6 18"
                  />
                  <path
                    d="m6 6 12 12"
                  />
                </svg>
              </div>
              <span
                class="text-[10px] font-black uppercase tracking-widest leading-none"
              >
                AYARLAR
              </span>
            </div>
          </div>
        </button>
      </div>
      <div
        class="w-full flex flex-col items-center overflow-hidden"
        style="height: 0px; opacity: 0;"
      >
        <div
          class="flex flex-col gap-2 sm:gap-1 items-center w-full py-1"
        >
          <div
            class="flex flex-col gap-2 sm:gap-1 items-center w-full px-1"
          >
            <div
              class="w-full"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-900 text-white hover:bg-stone-800 shadow-lg shadow-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        shrink-0 shadow-md rounded-xl sm:rounded-lg bg-stone-900 text-white w-full !col-span-2 !rounded-2xl mb-1 w-full !justify-start px-2 gap-2 h-[42px]
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 sm:w-5 sm:h-5 flex items-center justify-center"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-tags w-full h-full p-0.5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.172 2a2 2 0 0 1 1.414.586l6.71 6.71a2.4 2.4 0 0 1 0 3.408l-4.592 4.592a2.4 2.4 0 0 1-3.408 0l-6.71-6.71A2 2 0 0 1 6 9.172V3a1 1 0 0 1 1-1z"
                      />
                      <path
                        d="M2 7v6.172a2 2 0 0 0 .586 1.414l6.71 6.71a2.4 2.4 0 0 0 3.191.193"
                      />
                      <circle
                        cx="10.5"
                        cy="6.5"
                        fill="currentColor"
                        r=".5"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="
          
          
        "
                >
                  <div
                    class="flex-1 min-w-0 overflow-hidden"
                  >
                    <div
                      class="
        overflow-hidden whitespace-nowrap 
        text-[8px] font-black uppercase tracking-tighter 
        
      "
                    >
                      <span>
                        TOPLU İŞLEM
                      </span>
                    </div>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="w-full"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        shrink-0 shadow-md rounded-xl sm:rounded-lg bg-white text-stone-900 border-2 border-stone-100 w-full !justify-start px-2 gap-2 h-[42px]
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 sm:w-5 sm:h-5 flex items-center justify-center"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-bell"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10.268 21a2 2 0 0 0 3.464 0"
                      />
                      <path
                        d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="
          
          
        "
                >
                  <div
                    class="flex-1 min-w-0 overflow-hidden"
                  >
                    <div
                      class="
        overflow-hidden whitespace-nowrap 
        text-[8px] font-black uppercase tracking-tighter 
        
      "
                    >
                      <span>
                        BİLDİRİMLER
                      </span>
                    </div>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="w-full"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        shrink-0 shadow-md rounded-xl sm:rounded-lg bg-white text-stone-900 border-2 border-stone-100 w-full !justify-start px-2 gap-2 h-[42px]
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 sm:w-5 sm:h-5 flex flex-col items-center justify-center leading-none"
                  >
                    <span
                      class="text-[12px] sm:text-[14px] font-black"
                    >
                      ₺
                    </span>
                    <span
                      class="text-[5px] sm:text-[6px] font-bold uppercase tracking-tighter opacity-70 -mt-0.5"
                    >
                      TRY
                    </span>
                  </div>
                </div>
                <div
                  class="
          
          
        "
                >
                  <div
                    class="flex-1 min-w-0 overflow-hidden"
                  >
                    <div
                      class="
        overflow-hidden whitespace-nowrap 
        text-[8px] font-black uppercase tracking-tighter 
        
      "
                    >
                      <span>
                        PARA BİRİMİ
                      </span>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="grid grid-cols-2 gap-2 sm:gap-1 justify-items-center w-full px-1"
          >
            <div
              class="w-full flex justify-center"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-900 text-white hover:bg-stone-800 shadow-lg shadow-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-full aspect-square !p-0 
        
        shrink-0 shadow-md rounded-full sm:rounded-lg  w-[42px] h-[42px] !p-0
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 sm:w-5 sm:h-5 flex items-center justify-center"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-plus w-full h-full p-0.5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="3"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5 12h14"
                      />
                      <path
                        d="M12 5v14"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
            <div
              class="w-full flex justify-center"
              style="opacity: 0; transform: translateY(10px) scale(0.8);"
            >
              <button
                class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-full aspect-square !p-0 
        
        shrink-0 shadow-md rounded-full sm:rounded-lg bg-white text-stone-900 border-2 border-stone-100 w-[42px] h-[42px] !p-0
      "
              >
                <div
                  class="
          flex items-center justify-center shrink-0 transition-transform duration-300
          
          
        "
                >
                  <div
                    class="w-6 h-6 sm:w-5 sm:h-5 flex items-center justify-center"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-settings2 lucide-settings-2 w-full h-full p-0.5"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2.5"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14 17H5"
                      />
                      <path
                        d="M19 7h-9"
                      />
                      <circle
                        cx="17"
                        cy="17"
                        r="3"
                      />
                      <circle
                        cx="7"
                        cy="7"
                        r="3"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FloatingAdminMenu (Diamond Snapshot) > admin menüsü kilitli tasarım snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="z-[100]"
  >
    <div
      class="w-[104px] flex flex-col-reverse items-center shadow-[0_10px_40px_rgba(0,0,0,0.15)] bg-white/50 backdrop-blur-2xl border border-white/50 p-1 sm:p-1 rounded-2xl sm:rounded-lg overflow-hidden"
    >
      <div
        class="w-full"
      >
        <button
          aria-label="Menüyü Aç"
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        !bg-stone-900 !text-white hover:scale-105 active:scale-95 transition-all h-11 sm:h-8 w-full shadow-none rounded-lg relative overflow-hidden
      "
        >
          <div
            class="
          
          
        "
          >
            <div
              class="flex flex-row items-center justify-center gap-1.5 w-full h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-settings2 lucide-settings-2 w-full h-full p-0.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14 17H5"
                  />
                  <path
                    d="M19 7h-9"
                  />
                  <circle
                    cx="17"
                    cy="17"
                    r="3"
                  />
                  <circle
                    cx="7"
                    cy="7"
                    r="3"
                  />
                </svg>
              </div>
              <span
                class="text-[10px] font-black uppercase tracking-widest leading-none"
              >
                AYARLAR
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
